<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <!-- Nombre de la tienda -->
        <TextView
            android:id="@+id/tvNombreTienda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pedido_tienda"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/black" />
        <!-- Fecha del pedido -->
        <TextView
            android:id="@+id/tvFechaPedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pedido_fecha"
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray"
            android:layout_marginTop="4dp" />

        <!-- Fecha estimada de entrega -->
        <TextView
            android:id="@+id/tvFechaEstimadaPedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pedido_fecha_estimada"
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray"
            android:layout_marginTop="4dp" />
        <!-- Descripción del pedido -->
        <TextView
            android:id="@+id/tvDescripcionPedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pedido_descripcion"
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray"
            android:layout_marginTop="4dp"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>